# product-classification

./: .gitignore  .pre-commit-config.yaml  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/notebooks/: products.csv  qdrant-data-ingestion.ipynb
backend/src/: .dockerignore  dependencies.py  embedding_service.py  image_utils.py  lifespan.py  main.py  qdrant_service.py  router.py  schemas.py  settings.py
frontend/: Dockerfile  pyproject.toml
frontend/src/: main.py  settings.py
