[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.138.2",
    "loguru>=0.7.3",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "transformers>=5.12.1",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ipykernel>=7.3.0",
    "isort>=8.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "pandas>=3.0.4",
    "peft>=0.19.1",
    "ruff>=0.15.20",
    "tqdm>=4.68.3",
]
